force-app/main/default/objects/et4ae5__ET4AE_Config__c/et4ae5__ET4AE_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ET4AE Configuration</label>
</CustomObject>