force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__Enable_Cascading_Delete__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Enable_Cascading_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically delete parent and child tracking data records when using Tracking Data Cleanup Tool. To avoid Apex governor limits on batch delete jobs, disable cascade-delete.</inlineHelpText>
    <label>Enable Cascade-Delete</label>
    <type>Checkbox</type>
</CustomField>