force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__Environment__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Environment__c</fullName>
    <label>Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>