force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__JBPlatformEventEnable__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__JBPlatformEventEnable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>JB Platform Event Enabled</label>
    <type>Checkbox</type>
</CustomField>