force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__QA_Mode__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__QA_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Mode</label>
    <type>Checkbox</type>
</CustomField>