force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__Remote_Site_Setting_Added__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Remote_Site_Setting_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Site Setting Added</label>
    <type>Checkbox</type>
</CustomField>