force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__TenantId__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__TenantId__c</fullName>
    <label>Tenant Id (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>