force-app/main/default/objects/et4ae5__ET4AE_Config__c/fields/et4ae5__Tracking_Data_Clean_Up_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Tracking_Data_Clean_Up_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText>Enter the number of records to delete per batch. Delete up to 2000 records per batch.</inlineHelpText>
    <label>Tracking Data Cleanup Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>